[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Construction/Buildings/Turret-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Construction/Buildings/Turret.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 168.0

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/turretgun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.005, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "leftshoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/turretgun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "rightshoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Gun/turretgun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 1 ]
}

[node name="Turret" type="StaticBody2D" groups=[
"building",
"destructable",
]]
z_index = 1
script = ExtResource( 3 )

[node name="Stand" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Gun" type="Node2D" parent="."]

[node name="turretgun" type="Sprite" parent="Gun"]
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BulletPos" type="Node2D" parent="Gun"]
position = Vector2( 14, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ShotCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoilPlayer" type="AnimationPlayer" parent="."]
anims/recoil = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/leftshoot = SubResource( 6 )
anims/rightshoot = SubResource( 5 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShotCooldownTimer" to="." method="_on_ShotCooldownTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
